--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Personajes</h1>
     <main>
@@ -12,33 +15,33 @@
             <div class="image-container">
                 <img src="https://rickandmortyapi.com/api/character/avatar/589.jpeg" alt="personaje">
             </div>
+            <h2>Personaje</h2>
+            <span>Estado de Personajes</span>
         </article>
-        <h2>Personaje</h2>
-        <span>Estado de Personajes</span>
-
         <article>
             <div class="image-container">
                 <img src="https://rickandmortyapi.com/api/character/avatar/589.jpeg" alt="personaje">
             </div>
+            <h2>Personaje</h2>
+            <span>Estado de Personajes</span>
         </article>
-        <h2>Personaje</h2>
-        <span>Estado de Personajes</span>
-
         <article>
             <div class="image-container">
                 <img src="https://rickandmortyapi.com/api/character/avatar/589.jpeg" alt="personaje">
             </div>
+            <h2>Personaje</h2>
+            <span>Estado de Personajes</span>
         </article>
-        <h2>Personaje</h2>
-        <span>Estado de Personajes</span>
-
         <article>
             <div class="image-container">
                 <img src="https://rickandmortyapi.com/api/character/avatar/589.jpeg" alt="personaje">
             </div>
+            <h2>Personaje</h2>
+            <span>Estado de Personajes</span>
         </article>
-        <h2>Personaje</h2>
-        <span>Estado de Personajes</span>
+
     </main>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
